corrected alignment issues

--- a/src/index.css
+++ b/src/index.css
@@ -6,8 +6,14 @@
   box-sizing: border-box;
   /* overflow: hidden; */
 }
+
+html,
 body {
-  margin: 0;
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
 }
 
 a {
